Changed the "Work in progress" dialog to use the prompt service, so it now appears mid-screen.

--- a/prince/base/locale/en-us/editor.properties
+++ b/prince/base/locale/en-us/editor.properties
@@ -299,3 +299,8 @@ moredetails=Failure details
 #
 Replaced=Replaced
 occurrences=occurrences
+
+
+useWIP.title=Work in progress found
+useWIP.description=A working directory for your document still exists. Your previous editing session may have been interrupted. Press OK to open your current .sci file, or Cancel for the interrupted document.
+
