Getting File/Revert to work.

--- a/prince/base/locale/en-us/editor.properties
+++ b/prince/base/locale/en-us/editor.properties
@@ -47,6 +47,7 @@ SelectImageFile=Select Image File
 SelectVideoFile=Select Video File
 SaveDocument=Save Document
 SaveDocumentAs=Save Document As
+AbandonChanges=Abandon changes in %title%?
 ExportToText=Export to Text
 ExportToTex=Export to TeX
 EditMode=Edit Mode
@@ -108,7 +109,7 @@ FailedFileMsg=%x% of %total% files failed to publish.
 Prompt=Prompt
 # LOCALIZATION NOTE (PromptFTPUsernamePassword): Don't translate %host%
 PromptFTPUsernamePassword=Enter username and password for FTP server at %host%
-RevertCaption=Revert To Last Saved
+RevertCaption=Revert to last saved version
 Revert=Revert
 SendPageReason=before sending this page
 Send=Send
