--- a/filters/ptprince/ptdata/msi-latexin.tex
+++ b/filters/ptprince/ptdata/msi-latexin.tex
@@ -4808,8 +4808,10 @@
 
 \def\insert@enc#1{\msitag{ enc="#1"}}
 
-  
-\def\index#1{%
+
+\def\index{\attrib@text\@index}
+
+\def\@index#1{%
   \@inspecfalse
   \@idxlev=0
   \gdef\@idxentA{}%
