--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -657,6 +657,8 @@
 \MSIMathQuote{iiiint}
 \MSIMathQuote{iiint}
 \MSIMathQuote{iint}
+\MSIMathQuote{imath}
+\MSIMathQuote{jmath}
 \MSIMathQuote{impliedby}
 \MSIMathQuote{implies}
 \MSIMathQuote{Im}
