Fixed rest of 3446 but see comment in bug report.

--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1652,7 +1652,7 @@
 
 
 \def\func#1{\string\func\@brace{#1}}
-\def\limfunc#1{\string\limfunc\@brace{#1}}
+\def\limfunc#1#2{\string\limfunc\@brace{#2}}
 \def\operatorname{\@ifnextchar*{\limfunc}{\func}}
 
 
