Repaired damage from a couple days ago

--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1651,9 +1651,9 @@
 
 
 
-\def\func#1{\string\func\@brace{#1}}
-\def\limfunc#1#2{\string\limfunc\@brace{#2}}
-\def\operatorname{\@ifnextchar*{\limfunc}{\func}}
+%\def\func#1{\string\func\@brace{#1}}
+\def\@limfunc#1#2{\string\limfunc\@brace{#2}}
+\def\operatorname{\@ifnextchar*{\@limfunc}{\func}}
 
 
 \def\sqrt{%
