--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -457,7 +457,11 @@
 
 
 % Use MSIMathQuote to cause the enclosed LaTeX macro to not be expanded by
-% pretex. 
+% pretex.
+
+\MSIMathQuote{func}
+\MSIMathQuote{limfunc}
+\MSIMathQuote{substack}
 
 \MSIMathQuote{aleph}
 %(gp)%\MSIMathQuote{allowbreak}
