Change \smallfrown, \shortmid, \shortparallel, \thickapprox, and \thicksim to behave the same way as \smallsmile.  That is, import as TeX fields.  These characters don't exist as separate Unicode characters, so can't be directly created with V6, but they should not be transformed if imported from existing documents.

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -870,9 +870,10 @@
 \MSIMathQuote{sim}
 \MSIMathQuote{sinh}
 \MSIMathQuote{sin}
-\MSIMathQuote{smallfrown}
+%\MSIMathQuote{smallfrown}
 \MSIMathQuote{smallint}
 \MSIMathQuote{smallsetminus}
+%\MSIMathQuote{smallsmile}
 \MSIMathQuote{smile}
 \MSIMathQuote{spadesuit}
 \MSIMathQuote{sphericalangle}
@@ -933,8 +934,8 @@
 \MSIMathQuote{therefore}
 \MSIMathQuote{Theta}
 \MSIMathQuote{theta}
-\MSIMathQuote{thickapprox}
-\MSIMathQuote{thicksim}
+%\MSIMathQuote{thickapprox}
+%\MSIMathQuote{thicksim}
 \MSIMathQuote{tidotsint}
 \MSIMathQuote{tiiiint}
 \MSIMathQuote{tiiint}
