Must have forgotten to save file before last commit.  This does the changes for \shortmid and \shortparallel.

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -862,8 +862,8 @@
 \MSIMathQuote{sec}
 \MSIMathQuote{setminus}
 \MSIMathQuote{sharp}
-\MSIMathQuote{shortmid}
-\MSIMathQuote{shortparallel}
+%\MSIMathQuote{shortmid}
+%\MSIMathQuote{shortparallel}
 \MSIMathQuote{Sigma}
 \MSIMathQuote{sigma}
 \MSIMathQuote{simeq}
