Another html button change

--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1893,7 +1893,7 @@
   \fi
   \@TeXButton}
 
-\def\HTMLButton#1#2{\msitag{#2}}
+\def\HTMLButton#1#2{\msitag{<htmlfield name="#1">#2</htmlfield>}}
 
 \def\CDATA#1{#1}
 
