Import \nshortmid and \nshortparallel as TeX fields, same as others with distinct LaTeX characters, but overlapping Unicode characters.

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -778,8 +778,8 @@
 \MSIMathQuote{nprec}
 \MSIMathQuote{nRightarrow}
 \MSIMathQuote{nrightarrow}
-\MSIMathQuote{nshortmid}
-\MSIMathQuote{nshortparallel}
+%\MSIMathQuote{nshortmid}
+%\MSIMathQuote{nshortparallel}
 \MSIMathQuote{nsim}
 \MSIMathQuote{nsubseteqq}
 \MSIMathQuote{nsubseteq}
